Bug 161432 - [Fetch API] Request construction failure should not set "bodyUsed"
Summary: [Fetch API] Request construction failure should not set "bodyUsed"
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: youenn fablet
URL:
Keywords:
Depends on:
Blocks: 151937
  Show dependency treegraph
 
Reported: 2016-08-31 02:03 PDT by youenn fablet
Modified: 2016-08-31 09:46 PDT (History)
1 user (show)

See Also:


Attachments
Patch (5.95 KB, patch)
2016-08-31 02:07 PDT, youenn fablet
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description youenn fablet 2016-08-31 02:03:11 PDT
As illustrated by chromium fetch tests, Request construction failure should not set "bodyUsed".
Comment 1 youenn fablet 2016-08-31 02:07:22 PDT
Created attachment 287506 [details]
Patch
Comment 2 WebKit Commit Bot 2016-08-31 09:46:42 PDT
Comment on attachment 287506 [details]
Patch

Clearing flags on attachment: 287506

Committed r205253: <http://trac.webkit.org/changeset/205253>
Comment 3 WebKit Commit Bot 2016-08-31 09:46:49 PDT
All reviewed patches have been landed.  Closing bug.