[Fetch API] Request construction failure should not set "bodyUsed" https://bugs.webkit.org/show_bug.cgi?id=161432

Patch by Youenn Fablet <youenn@apple.com> on 2016-08-31
Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

* web-platform-tests/fetch/api/request/request-disturbed-expected.txt:
* web-platform-tests/fetch/api/request/request-disturbed.html:

Source/WebCore:

Covered by added sub-test coming from chromium fetch test suite.

* Modules/fetch/FetchRequest.cpp:
(WebCore::methodCanHaveBody):
(WebCore::FetchRequest::setBody): Check whether request can have a body before disturbing the passed request.
(WebCore::validateBodyAndMethod): Deleted.

Canonical link: https://commits.webkit.org/179595@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205253 268f45cc-cd09-0410-ab3c-d52691b4dbfc